--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>UI5 made easy!</title>
-    <script id="sap-ui-bootstrap"
-            src="resources/sap-ui-core.js"
-            data-sap-ui-libs="sap.m"
-            data-sap-ui-theme="sap_horizon"
-            data-sap-ui-compatVersion="edge"
-            data-sap-ui-oninit="onInit"
-            data-sap-ui-async="true"
-    ></script>
-    <script>
-      function onInit() {
-        sap.ui.require(["sap/m/Button"], function(Button) {
-          new Button({
-            text: "Hello World",
-            press: function() {
-              alert(this.getText());
-            }
-          }).placeAt(content);
-        });
-      }
-    </script>
-  </head>
-  <body class="sapUiBody">
-    <div id="content"></div>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<title>UI5 TypeScript Hello World App</title>
+	<script id="sap-ui-bootstrap"
+	        src="resources/sap-ui-core.js"
+	        data-sap-ui-resourceroots='{
+	            "ui5typescriptfromscratch": "./"
+	        }'
+	        data-sap-ui-theme="sap_horizon"
+	        data-sap-ui-compatVersion="edge"
+	        data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
+	        data-sap-ui-async="true"
+	        data-sap-ui-xx-waitForTheme="true"
+	        data-sap-ui-xx-supportedLanguages="en,de"
+	></script>
+</head>
+<body class="sapUiBody">
+	<div data-sap-ui-component data-name="ui5typescriptfromscratch" data-id="container" data-settings='{"id" : "ui5typescriptfromscratch"}'></div>
+</body>
 </html>
